# fbx-libra

./: CMakeLists.txt  LICENSE  README.md  conandata.yml
.github/workflows/: cmake-multi-platform.yml  release.yml
cmake/: CPackConfig.cmake  fbxsdk.cmake  flatbuffer.cmake  gtest.cmake
doc/: DesignDoc.md  FlatBufferを調査する.md  メモ.md  雑クラス図.md
examples/DecodeSample/: CMakeLists.txt
examples/EncodeSample/: CMakeLists.txt
examples/data/: hcw.fbs  hcw_generated.h  load_sample.py  vcw.fbs
examples/data/fbx/: sample_primitives.vcw
src/DecodeSample/: CMakeLists.txt  main.cpp
src/EncodeSample/: CMakeLists.txt  main.cpp
src/FbxLibra/: CMakeLists.txt  FBXLibra.cpp  FBXLibra.h  FbxClient.h  FlatBufferLoader.h  Status.h  main.cpp
src/FbxLibra/CounterWeight/: CounterWeight.cpp  CounterWeight.h  CounterWeightFactory.cpp  CounterWeightFactory.h  EmptyCounterWeight.cpp  EmptyCounterWeight.h  HierarchyCounterWeight.cpp  HierarchyCounterWeight.h  HierarchyCounterWeightFactory.cpp  HierarchyCounterWeightFactory.h  ICounterWeightFbxConvertable.h  SkinWeightCounterWeight.cpp  SkinWeightCounterWeight.h  SkinWeightCounterWeightFactory.cpp  SkinWeightCounterWeightFactory.h  VertexCounterWeight.cpp  VertexCounterWeight.h  VertexCounterWeightFactory.cpp  VertexCounterWeightFactory.h
src/FbxLibra/data/: cw.fbs
src/data/: hcw.fbs
src/data/FbxLibra/CounterWeight/: Hierarchy.py  Node.py  Transform.py  Vector3.py
test/: CMakeLists.txt  config.h.in  gtest_create_hierarchy.cpp  gtest_sample.cpp  gtest_skin_weight.cpp  gtest_vertex.cpp
test/data/: test_files.csv
test/data/cw/: dragon.hcw  sample_primitives.vcw  sample_skin_cube.scw  sample_skin_cube_multi.scw
test/data/fbx/: sample_primitives.fbx  sample_primitives_diff_vertex.fbx  sample_skin_cube.fbx  sample_skin_cube_diff_weight.fbx  sample_skin_cube_multi.fbx  sample_skin_cube_multi_diff_weight.fbx
